@@ -2,6 +2,7 @@ package com.pragma.hogar360.serviceshome.infrastructure.security;
 
 import com.pragma.hogar360.serviceshome.infrastructure.adapters.authentication.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -21,6 +22,8 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
+    @Value("${cors.allowed-origins}")
+    private String allowedOriginsString;
     private final JwtAuthenticationFilter jwtAuthFilter;
 
     @Bean
@@ -44,7 +47,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
+        if (allowedOriginsString != null && !allowedOriginsString.isEmpty()) {
+            configuration.setAllowedOrigins(Arrays.asList(allowedOriginsString.split(",")));
+        }
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
